# stm32l4r9

./: .gitmodules  CMakeLists.txt  Makefile  readme.txt
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
EWARM/: Project.ewd  Project.ewp
MDK-ARM/: Project.uvoptx  Project.uvprojx  startup_stm32l4r9xx.s
STemWin/App/: BASIC_HelloWorld.c
SW4STM32/STM32L4R9I-Discovery/: .cproject  .project
cmake/: rte_generator.cmake  utility.cmake
cmake/stm32/: FindSTM32LL.cmake  gcc_stm32.cmake  gcc_stm32f3.cmake
